all-xtest target no longer requires all-junit

--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -726,7 +726,7 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
       <ant dir="../utilities/loaderswitcher" target="netbeans"/>
   </target>
 
-  <target name="all-xtest" depends="all-openide,all-openide/io,all-openide/execution,all-core,all-core/execution,all-core/term,all-core/output,all-junit">
+  <target name="all-xtest" depends="all-openide,all-openide/io,all-openide/execution,all-core,all-core/execution,all-core/term,all-core/output">
       <ant dir="../xtest" antfile="build.xml" target="netbeans"/>
   </target>
   
