IZ=30563 HTTP Monitor no longer starts the internal web server

--- a/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
+++ b/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
@@ -385,10 +385,11 @@ MON_ParamEditor_Input_required=Input missing
 # 
 # No server dialog
 #
-MON_NoServer=The HTTP monitor requires the internal HTTP server to be running in order to receive data from the execution web server. 
-MON_CantReplay=The HTTP monitor requires the internal HTTP server to be running in order to replay requests.
+MON_NoServer=The HTTP monitor requires that an implementation of the
+internal HTTP server is available and running in order to receive data from the execution web server.  
+MON_CantReplay=The HTTP monitor requires that an implementation of the
+internal HTTP server is available and running in order to replay requests.
 MON_NoServerTitle=Internal HTTP server not running
-MON_Start_server=To start the server, choose Tools > Options > IDE Configuration > Server and External Tool Settings > HTTP Server and change the property Running to true.
 
 #NOI18N
 MON_Transaction_View_Help_ID=ctx_monitorintro
