slightly rephrasing "form loaded with errors" message

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -132,9 +132,9 @@ FMT_OpeningForm=Opening Form: {0} ...
 FMT_ERR_PersistenceManagerInstantiation=Cannot instantiate persistence manager:\n {0}
 
 # warning message when a form was loaded with errors (not all data loaded)
-MSG_FormLoadedWithErrors=Due to errors occurred during loading the form, some data could not be loaded.\n\
-It is not recommended to use this form now - some data would be lost after saving the form.\n\
-Please go through the reported errors, try to fix them, and open the form again.
+MSG_FormLoadedWithErrors=Errors occurred in loading the form data. It is not recommended to use\n\
+this form now - data that could not be loaded would be lost after saving the form.\n\
+Please go through the reported errors, try to fix them if possible, and open the form again.
 
 # title of the warning message above
 CTL_FormLoadedWithErrors=Warning - Form Loaded With Errors
