#29259 beaninfo describes peer's property only.

--- a/properties/src/org/netbeans/modules/properties/Bundle.properties
+++ b/properties/src/org/netbeans/modules/properties/Bundle.properties
@@ -151,8 +151,8 @@ CTL_PropertyKey=Key
 CTL_PropertyValue=Value
 
 # PropertiesDataLoaderBeanInfo
-HINT_Name=Name of properties object type.
-PROP_Name=Name
+HINT_Ext=List of extensions and MIME content types.
+PROP_Ext=Recognized Suffixes
 PROP_PropertiesLoader_Name=Properties Objects
 
 # PropertiesDataNode
