--- a/junit/src/org/netbeans/modules/junit/Bundle.properties
+++ b/junit/src/org/netbeans/modules/junit/Bundle.properties
@@ -11,8 +11,8 @@
 
 LBL_Action=Create Test
 # Actions API
-LBL_Action_RunTest=Run
-LBL_Action_CreateTest=Create
+LBL_Action_RunTest=Execute Test
+LBL_Action_CreateTest=Create Tests
 # Actions API
 LBL_Action=<name for action>
 # To include a mnemomic for the Main Window menus, use e.g.:
@@ -39,49 +39,49 @@ LBL_Action=<name for action>
 LBL_true=True
 LBL_false=False
 LBL_junit_settings=JUnit Module Settings
-PROP_file_system=Target file system for tests
-HINT_file_system=Target file system for tests
-PROP_suite_template=Suite class template
-HINT_suite_template=Suite class template
-PROP_class_template=Test class template
-HINT_class_template=Test class template
-PROP_members_public=Generate tests for public member functions
-HINT_members_public=Generate tests for public member functions
-PROP_members_protected=Generate tests for protected member functions
-HINT_members_protected=Generate tests for protected member functions
-PROP_members_package=Generate tests for package member functions
-HINT_members_package=Generate tests for package member functions
-PROP_body_comments=Generate comments in test function bodies
-HINT_body_comments=Generate comments
-PROP_body_content=Generate default bodies of test functions
-HINT_body_content=Generate default bodies of test functions
-PROP_javadoc=Generate JavaDoc comments
-HINT_javadoc=Generate JavaDoc comments
+PROP_file_system=Target File System for Tests
+HINT_file_system=Target File System for Tests
+PROP_suite_template=Suite Class Template
+HINT_suite_template=Suite Class Template
+PROP_class_template=Test Class Template
+HINT_class_template=Test Class Remplate
+PROP_members_public=Generate Tests for Public Member Methods
+HINT_members_public=Generate Tests for Public Member Methods
+PROP_members_protected=Generate Tests for Protected Member Methods
+HINT_members_protected=Generate Tests for Protected Member Methods
+PROP_members_package=Generate Tests for Package Member Methods
+HINT_members_package=Generate Tests for Package Member Methods
+PROP_body_comments=Generate Comments in Test Method Bodies
+HINT_body_comments=Generate Comments
+PROP_body_content=Generate Default Bodies of Test Methods
+HINT_body_content=Generate Default Bodies of Test Methods
+PROP_javadoc=Generate JavaDoc Comments
+HINT_javadoc=Generate JavaDoc Comments
 JUnitCfgOfCreate.lblFileSystem.text=File System:
 JUnitCfgOfCreate.cmdMount.text=Mount
-JUnitCfgOfCreate.lblSuiteClass.text=Suite class:
-JUnitCfgOfCreate.lblTestClass.text=Test class:
-JUnitCfgOfCreate.chkPublic.text=Public functions
-JUnitCfgOfCreate.chkProtected.text=Protected functions
-JUnitCfgOfCreate.chkPackage.text=Package functions
-JUnitCfgOfCreate.chkComments.text=Comments
-JUnitCfgOfCreate.chkContent.text=Dummy content
-JUnitCfgOfCreate.chkJavaDoc.text=JavaDoc
-LBL_JUnitCfgOfCreate_Title=Configuration of Unit test generator
-LBL_New_FS_Dialog_Title=Mount file system
+JUnitCfgOfCreate.lblSuiteClass.text=Suite Class:
+JUnitCfgOfCreate.lblTestClass.text=Test Class:
+JUnitCfgOfCreate.chkPublic.text=\ Public Methods
+JUnitCfgOfCreate.chkProtected.text=\ Protected Methods
+JUnitCfgOfCreate.chkPackage.text=\ Package Methods
+JUnitCfgOfCreate.chkComments.text=\ Comments
+JUnitCfgOfCreate.chkContent.text=\ Dummy Content
+JUnitCfgOfCreate.chkJavaDoc.text=\ JavaDoc
+LBL_JUnitCfgOfCreate_Title=Create Tests
+LBL_New_FS_Dialog_Title=Mount File System
 MSG_file_system_not_found=Target file system was not found among mounted file systems.
-JUnitCfgOfCreate.chkEnabled.text=Show me this dialog.
+JUnitCfgOfCreate.chkEnabled.text=\ Show Create Tests Configuration Dialog
 LBL_no_file_system_selected=(no file system selected)
-HINT_test_runner=Test runner class
-PROP_test_runner=Test runner class
-JUnitCfgOfCreate.chkExceptions.text=Include exceptions
-MSG_compilation_failed=Test compilation has failed
-LBL_progress_executing=Executing tests...
-LBL_progress_compiling=Compiling test...
+HINT_test_runner=Test Runner Class
+PROP_test_runner=Test Runner Class
+JUnitCfgOfCreate.chkExceptions.text=\ Include Exceptions
+MSG_compilation_failed=Test compilation has failed.
+LBL_progress_executing=Executing tests ...
+LBL_progress_compiling=Compiling test ...
 LBL_generator_status_ignoring=Ignoring:
-HINT_generate_exception_classes=Generate tests for Exception classes
-PROP_generate_exception_classes=Generate tests for Exception classes
-LBL_Action_OpenTest=Open
+HINT_generate_exception_classes=Generate Tests for Exception Classes
+PROP_generate_exception_classes=Generate Tests for Exception Classes
+LBL_Action_OpenTest=Open Test
 # Execution API
 MSG_format_hint=<hints on how to use executor...>\n{myOptionVal} - use my option
 LBL_executor_internal=Internal Execution
@@ -115,17 +115,17 @@ MSG_create_test_first=You have to create test classes first, before you can exec
 MSG_file_from_node_failed=File can't be found for selected node.
 MSG_test_file_not_found=Test file was not found.
 MSG_execution_failed=Test execution has failed.
-PROP_generate_abstract_impl=Generate tests for Abstract classes
-HINT_generate_abstract_impl=Generate tests for Abstract classes
-JUnitCfgOfCreate.chkAbstractImpl.text=Include abstract classes
+PROP_generate_abstract_impl=Generate Tests for Abstract Classes
+HINT_generate_abstract_impl=Generate Tests for Abstract Classes
+JUnitCfgOfCreate.chkAbstractImpl.text=\ Include Abstract Classes
 # NetBeans extension to JUnit
-JUnitCfgOfCreate.generateNbJUnit.text=Generate NetBeans JUnit
-PROP_generate_nbjunit=Generate tests based on NetBeans extension to JUnit
-HINT_generate_nbjunit=Generate tests based on NetBeans extension to JUnit
+JUnitCfgOfCreate.generateNbJUnit.text=\ Generate NetBeans JUnit
+PROP_generate_nbjunit=Generate Tests Based on NetBeans Extension to JUnit
+HINT_generate_nbjunit=Generate Tests Based on NetBeans Extension to JUnit
 # Regenerate suite method
-JUnitCfgOfCreate.regenerateSuiteMethod.text=Regenerate suite method
-PROP_regenerate_suite_method=Regenerate suite method
-HINT_regenerate_suite_method=Regenerate suite method
+JUnitCfgOfCreate.regenerateSuiteMethod.text=Regenerate Suite Method
+PROP_regenerate_suite_method=Regenerate Suite Method
+HINT_regenerate_suite_method=Regenerate Suite Method
 
 # Layer stuff
 # Help stuff
@@ -141,8 +141,8 @@ Templates/JUnit/SimpleNbJUnitTest.java=Simple NbJUnit TestCase
 
 # Java doc stuff
 Mount/Javadoc/org-netbeans-modules-junit-junit-javadoc.xml=JUnit 3.7 Javadoc
-Mount/Javadoc/org-netbeans-modules-junit-nb-junit-javadoc.xml=NetBeans extension to JUnit (NbJUnit) Javadoc
+Mount/Javadoc/org-netbeans-modules-junit-nb-junit-javadoc.xml=NetBeans Extension to JUnit (NbJUnit) Javadoc
 
 # Java library stuff
 Mount/java/org-netbeans-modules-junit-junit-library.xml=JUnit 3.7
-Mount/java/org-netbeans-modules-junit-nbjunit-library.xml=NetBeans extension to JUnit (NbJUnit)
+Mount/java/org-netbeans-modules-junit-nbjunit-library.xml=NetBeans Extension to JUnit (NbJUnit)
