--- a/xml/test/build.xml
+++ b/xml/test/build.xml
@@ -72,7 +72,12 @@ Microsystems, Inc. All Rights Reserved.
             <fileset dir="../tools/test/qa-functional/src"/>
             <fileset dir="../text-edit/test/qa-functional/src"/>
             <fileset dir="../tree-edit/test/qa-functional/src"/>
-            </copy>
+        </copy>
+	<delete>
+	   <fileset dir="qa-functional/src">
+	      <include name="**/*.class"/>
+	   </fileset>
+	</delete>
         <ant antfile="${xtest.module_harness.antfile}" dir="." target="compiler-launcher"/>
     </target>
     
@@ -141,6 +146,7 @@ Microsystems, Inc. All Rights Reserved.
         <pathelement location="${netbeans.home}/modules/autoload/java-src-model.jar"/>
         <pathelement location="${netbeans.home}/modules/autoload/openide-execution.jar"/>
         <pathelement location="${netbeans.home}/modules/autoload/xml-core.jar"/>
+        <pathelement location="${netbeans.home}/modules/autoload/xml-tax.jar"/>	
         <pathelement location="${netbeans.home}/modules/css.jar"/>
         <!--
         <pathelement location="${netbeans.home}/modules/xml-catalog.jar"/>
