--- a/db/build.xml
+++ b/db/build.xml
@@ -16,6 +16,7 @@ Microsystems, Inc. All Rights Reserved.
 <project name="db" default="netbeans" basedir=".">
 
   <property name="license.file" value="../nbbuild/standard-nbm-license.txt"/>
+  <property name="homepage.base" value="netbeans.org"/>
 
   <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../nbbuild/nbantext.jar"/>
@@ -119,7 +120,7 @@ Microsystems, Inc. All Rights Reserved.
     <makenbm file="db.nbm"
              topdir="."
              module="netbeans/modules/db.jar"
-             homepage="http://${homepage.base}/db.html"
+    	     homepage="http://db.${homepage.base}/"
              distribution="${dist.base}/db.nbm">
       <license file="${license.file}"/>
       <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
