Updated to JUnit 3.8.1 and updated L&F of dialogs

--- a/junit/src/org/netbeans/modules/junit/Bundle.properties
+++ b/junit/src/org/netbeans/modules/junit/Bundle.properties
@@ -67,6 +67,8 @@ JUnitCfgOfCreate.chkPackage.text=\ Package Methods
 JUnitCfgOfCreate.chkComments.text=\ Comments
 JUnitCfgOfCreate.chkContent.text=\ Dummy Content
 JUnitCfgOfCreate.chkJavaDoc.text=\ JavaDoc
+JUnitCfgOfCreate.jpTemplates.title=\ Templates\ 
+JUnitCfgOfCreate.jpCodeGen.title=\ Code Generation\ 
 LBL_JUnitCfgOfCreate_Title=Create Tests
 LBL_New_FS_Dialog_Title=Mount File System
 MSG_file_system_not_found=Target file system was not found among mounted file systems.
@@ -123,9 +125,10 @@ JUnitCfgOfCreate.generateNbJUnit.text=\ Generate NetBeans JUnit
 PROP_generate_nbjunit=Generate Tests Based on NetBeans Extension to JUnit
 HINT_generate_nbjunit=Generate Tests Based on NetBeans Extension to JUnit
 # Regenerate suite method
-JUnitCfgOfCreate.regenerateSuiteMethod.text=Regenerate Suite Method
+JUnitCfgOfCreate.regenerateSuiteMethod.text=\ Regenerate Suite Method
 PROP_regenerate_suite_method=Regenerate Suite Method
 HINT_regenerate_suite_method=Regenerate Suite Method
+
 
 # Layer stuff
 # Help stuff
