--- a/junit/build.xml
+++ b/junit/build.xml
@@ -80,7 +80,7 @@ Microsystems, Inc. All Rights Reserved.
 
   <target name="release" depends="init">
     <mkdir dir="netbeans/docs"/>
-    <copy file="external/junit-api.zip" tofile="netbeans/docs/junit-api.zip"/>
+    <copy file="external/junit-3.8.1-api.zip" todir="netbeans/docs"/>
     <mkdir dir="netbeans/modules/ext"/>
     <copy todir="netbeans/modules/ext">
       <fileset dir="external">
