switching property value from "Recognized Suffixes" to "File Extensions" to be consistent with the way this property is listed in other object types. In the future (i.e., not just before a code freeze), it might be a good idea to switch them all to something like "Recognized Extensions" Note: the XML object types call this prop "Extensions and MIME Types", which I think is fine for now.

--- a/properties/src/org/netbeans/modules/properties/Bundle.properties
+++ b/properties/src/org/netbeans/modules/properties/Bundle.properties
@@ -152,7 +152,7 @@ CTL_PropertyValue=Value
 
 # PropertiesDataLoaderBeanInfo
 HINT_Ext=List of extensions and MIME content types.
-PROP_Ext=Recognized Suffixes
+PROP_Ext=File Extensions
 PROP_PropertiesLoader_Name=Properties Objects
 
 # PropertiesDataNode
