Added mnemonics to buttons

--- a/junit/src/org/netbeans/modules/junit/Bundle.properties
+++ b/junit/src/org/netbeans/modules/junit/Bundle.properties
@@ -58,25 +58,37 @@ HINT_body_content=Generate Default Bodies of Test Methods
 PROP_javadoc=Generate JavaDoc Comments
 HINT_javadoc=Generate JavaDoc Comments
 JUnitCfgOfCreate.lblFileSystem.text=File System:
+JUnitCfgOfCreate.lblFileSystem.mne=F
 JUnitCfgOfCreate.cmdMount.text=Mount
+JUnitCfgOfCreate.cmdMount.mne=M
 JUnitCfgOfCreate.lblSuiteClass.text=Suite Class:
+JUnitCfgOfCreate.lblSuiteClass.mne=U
 JUnitCfgOfCreate.lblTestClass.text=Test Class:
+JUnitCfgOfCreate.lblTestClass.mne=T
 JUnitCfgOfCreate.chkPublic.text=\ Public Methods
+JUnitCfgOfCreate.chkPublic.mne=P
 JUnitCfgOfCreate.chkProtected.text=\ Protected Methods
+JUnitCfgOfCreate.chkProtected.mne=R
 JUnitCfgOfCreate.chkPackage.text=\ Package Methods
+JUnitCfgOfCreate.chkPackage.mne=K
 JUnitCfgOfCreate.chkComments.text=\ Comments
+JUnitCfgOfCreate.chkComments.mne=C
 JUnitCfgOfCreate.chkContent.text=\ Dummy Content
+JUnitCfgOfCreate.chkContent.mne=N
 JUnitCfgOfCreate.chkJavaDoc.text=\ JavaDoc
+JUnitCfgOfCreate.chkJavaDoc.mne=D
 JUnitCfgOfCreate.jpTemplates.title=\ Templates\ 
 JUnitCfgOfCreate.jpCodeGen.title=\ Code Generation\ 
 LBL_JUnitCfgOfCreate_Title=Create Tests
 LBL_New_FS_Dialog_Title=Mount File System
 MSG_file_system_not_found=Target file system was not found among mounted file systems.
 JUnitCfgOfCreate.chkEnabled.text=\ Show Create Tests Configuration Dialog
+JUnitCfgOfCreate.chkEnabled.mne=W
 LBL_no_file_system_selected=(no file system selected)
 HINT_test_runner=Test Runner Class
 PROP_test_runner=Test Runner Class
-JUnitCfgOfCreate.chkExceptions.text=\ Include Exceptions
+JUnitCfgOfCreate.chkExceptions.text=\ Include Exception Classes
+JUnitCfgOfCreate.chkExceptions.mne=E
 MSG_compilation_failed=Test compilation has failed.
 LBL_progress_executing=Executing tests ...
 LBL_progress_compiling=Compiling test ...
@@ -120,12 +132,11 @@ MSG_execution_failed=Test execution has failed.
 PROP_generate_abstract_impl=Generate Tests for Abstract Classes
 HINT_generate_abstract_impl=Generate Tests for Abstract Classes
 JUnitCfgOfCreate.chkAbstractImpl.text=\ Include Abstract Classes
-# NetBeans extension to JUnit
-JUnitCfgOfCreate.generateNbJUnit.text=\ Generate NetBeans JUnit
-PROP_generate_nbjunit=Generate Tests Based on NetBeans Extension to JUnit
-HINT_generate_nbjunit=Generate Tests Based on NetBeans Extension to JUnit
+JUnitCfgOfCreate.chkAbstractImpl.mne=A
+
 # Regenerate suite method
-JUnitCfgOfCreate.regenerateSuiteMethod.text=\ Regenerate Suite Method
+JUnitCfgOfCreate.chkRegenerateSuite.text=\ Regenerate Suite Method
+JUnitCfgOfCreate.chkRegenerateSuite.mne=G
 PROP_regenerate_suite_method=Regenerate Suite Method
 HINT_regenerate_suite_method=Regenerate Suite Method
 
