--- a/web.core/src/org/netbeans/modules/web/core/Bundle.properties
+++ b/web.core/src/org/netbeans/modules/web/core/Bundle.properties
@@ -78,8 +78,7 @@ Services/MIMEResolver/org-netbeans-modules-web-core-resources-mime-resolver.xml=
 Services/JSP_Servlet/org-netbeans-modules-web-core-ServletSettings.settings=JSP & Servlet
 # Javadoc
 Mount/java/org-netbeans-modules-web-core-resources-library-servlet.xml=Servlet 2.3 API Library
-Mount/Javadoc/org-netbeans-modules-web-javadoc-servlet.xml=Servlet 2.3 API Javadoc
-Mount/Javadoc/org-netbeans-modules-web-javadoc-jsp.xml=JSP 1.2 API Javadoc
+Mount/Javadoc/org-netbeans-modules-web-core-resources-javadoc_servletjsp.xml=Servlet 2.3 and JSP 1.2 API Javadoc
 
 #Mount web module dialog
 PROP_SHOW_MSG_DIALOG=Show Web Module Added Info
