Adding a helper target to regenerate the database if needed. This target is not normally run, and needs to be adjusted to point to the servlet API sources.
Removing the old servlet22 completion database.

Updating the servlet23/jsp12 completion database (building from sources) to include the information on parameter names and deprecated methods.

--- a/web.core.syntax/build.xml
+++ b/web.core.syntax/build.xml
@@ -58,6 +58,7 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="release">
+    <!-- parser database -->
     <copy todir="netbeans">
       <fileset dir="release" excludesfile="${nb_root}/nbbuild/standard-jar-excludes.txt"/>
     </copy>
@@ -113,6 +114,13 @@ Microsystems, Inc. All Rights Reserved.
   <target name="test" depends="test-build" description="Test module inside running IDE.">
     <nbinstaller module="reload/jsp-syntax.jar" action="reinstall"/>
   </target>
+
+    <!-- this task is not run as a part of the standard build --> 
+    <target name="parser-db">
+        <taskdef name="makeparserdb" classname="org.netbeans.nbbuild.MakeParserDB" classpath="../../nbbuild/nbantext.jar"/>
+        <mkdir dir="netbeans/system/ParserDB"/>
+        <makeparserdb db="release/system/ParserDB/servlet23jsp12" sources="P:/jakarta/jakarta-servletapi-4/src/share" nbroot="../.."/>
+    </target>
 
 </project>
 
