--- a/web.core/build.xml
+++ b/web.core/build.xml
@@ -25,6 +25,10 @@ Microsystems, Inc. All Rights Reserved.
   <property name="nbm_alias" value="nb_ide"/>
   <property name="webbeans_root" location="src/org/netbeans/modules/web/dd/model"/>
 
+  <target name="init">
+    <ant dir="../external" target="unscramble"/>
+  </target>
+
   <!-- Check if it is neceseary to rebuild beans -->
   <target name="dd2beans_init">
         <mkdir dir="${webbeans_root}"/>
@@ -101,7 +105,7 @@ Microsystems, Inc. All Rights Reserved.
     </locjar>
   </target>
 
-  <target name="release">
+  <target name="release" depends="init">
     <!-- javadoc -->
     <copy file="../external/servlet23jsp12-docs.zip" todir="netbeans/docs"/>
   </target>
