--- a/web.debug/build.xml
+++ b/web.debug/build.xml
@@ -37,6 +37,7 @@ Microsystems, Inc. All Rights Reserved.
          <pathelement location="${nb_root}/debuggerjpda/netbeans/modules/jpdaDebugger.jar"/>
          <pathelement location="${nb_root}/java/netbeans/modules/java.jar"/>
          <pathelement location="${nb_root}/j2eeserver/netbeans/modules/autoload/j2eeserver.jar"/>
+         <pathelement location="${nb_root}/html/netbeans/modules/html.jar"/>
          <pathelement location="${nb_root}/web/core/netbeans/modules/jsp.jar"/>
          <pathelement location="${nb_root}/web/jspsyntax/netbeans/modules/jsp-syntax.jar"/>
         <pathelement location="${nb_root}/openide/netbeans/lib/openide.jar"/>
