added jemmy module into testtools modified dependencies between testtools modules added jemmy and jellytools module into javadoc build

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -206,13 +206,12 @@ config.modules.bloated-plus-extrabins=${config.modules.bloated}, \
         jini
 
 #moduleconfig for QA's testtools
-config.fixedmodules.testtools=
-config.modules.testtools=jemmy, \
+config.fixedmodules.testtools=jemmy, \
         jellytools, \
-        jemmysupport, \
         junit, \
-        testtools, \
         xtest
+config.modules.testtools=jemmysupport, \
+        testtools
 
 # moduleconfig for nbms in Daily Alpha Update Centre
 # consider modules icebrowser,vcscvs,jini,debuggertools
@@ -230,6 +229,7 @@ config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
         freestylebrowser, \
         innertesters, \
         jellytools, \
+        jemmy, \
         jemmysupport, \
         junit, \
         lexer, \
@@ -274,6 +274,8 @@ config.fixedmodules.javadoc=openide, \
         diff, \
         java/api, \
         java/srcmodel, \
+        jemmy, \
+        jellytools, \
         debuggercore/oldapi, \
         lexer, \
         openidex/looks, \
