--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -363,12 +363,15 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <ant dir="../javaembeddedserver" target="netbeans"/>
   </target>
   -->
-  <target name="all-jellytools" depends="all-openide,all-core,all-core/term,all-xtest">
+  <target name="all-jellytools" depends="all-openide,all-core,all-core/term,all-jemmy,all-xtest,all-classfile,all-java,all-java/api,all-editor,all-java/srcmodel,all-openide/deprecated,all-core/deprecated">
     <echo message="Building module jellytools..."/>
     <ant dir="../jellytools" target="netbeans"/>
   </target>
-  <target name="all-jemmy" description="Dummy target for module jemmy"/>
-  <target name="all-jemmysupport" depends="all-openide,all-diff">
+  <target name="all-jemmy" depends="all-openide,all-core,all-classfile,all-java,all-java/api,all-editor,all-java/srcmodel,all-openide/deprecated,all-core/deprecated">
+    <echo message="Building module jemmy..."/>
+    <ant dir="../jemmy" target="netbeans"/>
+  </target>
+  <target name="all-jemmysupport" depends="all-openide,all-jemmy,all-diff">
     <echo message="Building module jemmysupport..."/>
     <ant dir="../jemmysupport" target="netbeans"/>
   </target>
@@ -504,7 +507,7 @@ try building with the flag: -Dnetbeans.no.pre.unscramble=true</echo>
     <ant dir="../tasklist/javadoc" target="netbeans"/>
   </target>
 
-  <target name="all-testtools" depends="all-openide,all-openide/compiler,all-openide/execution,all-openide/io,all-core,all-java,all-ant,all-jemmysupport,all-jellytools">
+  <target name="all-testtools" depends="all-openide,all-openide/compiler,all-openide/execution,all-openide/io,all-core,all-java,all-ant,all-jemmy,all-jemmysupport,all-jellytools">
     <echo message="Building module testtools..."/>
     <ant dir="../testtools" target="netbeans"/>
   </target>
