#30791 Exceptions annotated by user level messages.

--- a/xsl/src/org/netbeans/modules/xsl/transform/Bundle.properties
+++ b/xsl/src/org/netbeans/modules/xsl/transform/Bundle.properties
@@ -31,6 +31,9 @@ NAME_transform_panel_title=XSL Transformation
 # {1}=XSLT script filename
 MSG_transformation_1=Starting {0} by {1} transformation...
 MSG_transformation_2=Transformation finished.
+MSG_sourceError=Cannot load the document to be transformed!
+MSG_transError=Cannot load the transformation!
+MSG_resultError=Cannot write down the result!
 PROP_transformation_io_name=XSLT Processor
 NAME_transformation_preview=Transformation Preview
 MSG_opening_browser=Result of transformation has been opened in Web Browser.
